tests/fixtures/invalid/str_rshift_bool.py
# Cannot right shift Str and Bool
x: str = "hello" >> True
